--- a/calculator.html
+++ b/calculator.html
@@ -2,9 +2,65 @@
 <html>
   <head>
     <title>Calculator</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="js/scripts.js"></script>
   </head>
   <body>
-    <h1>Calculator</h1>
-    <script src="js/scripts.js"></script>
+    <div class="jumbotron">
+      <h1>Calculator</h1>
+    </div>
+
+    <div class="container">
+       <h1>Calculator</h1>
+       <form id="add">
+         <div class="form-group">
+           <label for="add1">1st number:</label>
+           <input id="add1" class="form-control" type="text">
+         </div>
+         <div class="form-group">
+           <label for="add2">2nd number:</label>
+           <input id="add2" class="form-control" type="text">
+         </div>
+         <button type="submit" class="btn btn-success">Add!</button>
+       </form>
+       <form id="subtract">
+         <div class="form-group">
+           <label for="subtract1">1st number:</label>
+           <input id="subtract1" class="form-control" type="text">
+         </div>
+         <div class="form-group">
+           <label for="subtract2">2nd number:</label>
+           <input id="subtract2" class="form-control" type="text">
+         </div>
+         <button type="submit" class="btn btn-success">Subtract!</button>
+       </form>
+       <form id="multiply">
+         <div class="form-group">
+           <label for="multiply1">1st number:</label>
+           <input id="multiply1" class="form-control" type="text">
+         </div>
+         <div class="form-group">
+           <label for="multiply2">2nd number:</label>
+           <input id="multiply2" class="form-control" type="text">
+         </div>
+         <button type="submit" class="btn btn-success">Multiply!</button>
+       </form>
+       <form id="divide">
+         <div class="form-group">
+           <label for="divide1">1st number:</label>
+           <input id="divide1" class="form-control" type="text">
+         </div>
+         <div class="form-group">
+           <label for="divide2">2nd number:</label>
+           <input id="divide2" class="form-control" type="text">
+         </div>
+         <button type="submit" class="btn btn-success">Divide!</button>
+       </form>
+       <div id="output">
+
+       </div>
+     </div>
   </body>
 </html>
